# ComfyUI-NoteManage

./: README.md  __init__.py  manifest.json  pyproject.toml
.github/workflows/: publish.yml
js/: node_notes.js
